# site2

./: .gitignore  ReadMe.md  config.toml
assets/css/: Alegreya.css  Google-Fonts.css  Plate188.css
assets/js/: blog.js  pageinit.js
assets/scss/: 1800.scss  _blog-index.scss  _blog-mixins.scss  _post-layout.scss  _post-theme.scss  blog.scss  post.scss  tables.scss  top.scss
content/posts/bmi-compatibility/: index.md
content/posts/cmake-pkg/: index.md
content/posts/layout-sandbox/: index.md
content/posts/make-it-async/: index.md
content/posts/shared-module-libraries/: index.md
content/posts/structured-concurrency-1/: index.md
content/posts/why-nickelpro/: index.md
content/top/: about.md  root.md
layouts/: 404.html  index.html
layouts/_default/: baseof.html
layouts/_markup/: render-heading.html
layouts/partials/: blog_footer.html  image.html  tabula-cell.html  top_footer.html  top_head.html  top_header.html  tufte_note.html
layouts/posts/: list.html  single.html
layouts/shortcodes/: banner.html  collapse.html  collapse_img.html  education.html  experience.html  fleuron.html  img.html  img2.html  marginalia.html  note.html  project.html  rb.html  sidenote.html  sn.html  tabula-body.html  tabula-head.html  tabula-row.html  tabula-td.html  tabula-th.html  tabula.html
layouts/top/: about.html  list.html  root.html
trace_sweep/: pyproject.toml  trace_sweep.py
