[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "trace-sweep"
version = "0.1.0"
description = "Sweep Inkscape-compatible brightness-cutoff traces through Potrace and export PNGs"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=9.1",
]

[project.scripts]
trace-sweep = "trace_sweep:cli"

[tool.setuptools]
py-modules = ["trace_sweep"]
